# ai-procurement-os

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  claude.md  compose.yaml  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  test_honsha.py  test_rfq_playwright.py  test_treemap.py
.github/: copilot-instructions.md
.streamlit/: config.toml
apps/OCR-doc-reader/: app.py
apps/rfq/: app.py  db.py
apps/spend-analytics/: app.py
config/: benchmark_definitions.yaml  column_dictionary.yaml  commodity_templates.yaml  import_tables.yaml
config/app/: modules.yaml  security.yaml
config/data/column_map/: default.yaml
config/kpi/: targets.yaml
config/ocr/: default.yaml
data/samples/: employee_master_mvp_v2_100ish.csv  items_master_v4.csv  po_transactions_v4.csv  suppliers_master_po_v4.csv
docs/: CONTEXT.md  rfq_flow_spec_mvp.md
docs/runbook/: security.md
githooks/: pre-push
schemas/: audit_log.schema.json
scripts/: db_utils.py  fix_supplier_distribution.py  generate_quote_template.py  install_git_hooks.ps1  load_csv_to_sqlite.py  normalize_columns.py  run_streamlit.ps1  security_scan.py  smoke_spend_analytics.py  template_utils.py
services/api/: __init__.py  main.py
services/api/routes/: __init__.py  ap.py  ocr.py  rfx.py  spend.py
services/api/templates/spend/: base.html
services/api/templates/spend/partials/: dashboard.html  filter_medium.html  kpi_milestones.html  tab_compliance.html  tab_concentration.html  tab_improvements.html  tab_kpi.html  tab_map.html  tab_overview.html  tab_price_variance.html
